deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-app
          image: ghcr.io/softwarestacksolutions/python-app:latest
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
